1. Collection API Улучшения[#79639]