@@ -17,7 +17,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
@@ -34,7 +34,7 @@ public class ConvertMatrix2ListTest {
                 {13, 14, 15, 16},
                 {17, 18, 19, 20}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20
         );
         List<Integer> result = list.toList(input);
@@ -44,9 +44,9 @@ public class ConvertMatrix2ListTest {
     @Test
     public void whenListContains2RowsThenList6() {
         ConvertMatrix2List convertList = new ConvertMatrix2List();
-        List<int[]> list = Arrays.asList(new int[]{1, 2}, new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(new int[]{1, 2}, new int[]{3, 4, 5, 6});
         List<Integer> result = convertList.convert(list);
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6
         );
         assertThat(result, is(expect));
